Adjusted spacing of Services and Testimonial section, Mobile version of Testimonial cards are now correct

--- a/components/HeroSection/Hero.module.css
+++ b/components/HeroSection/Hero.module.css
@@ -2,12 +2,13 @@
     padding: 10px;
     width: 100vw;
     height: 100vh;
+    
 }
 
 .innerWrapper{
     display: flex;
     flex-direction: column-reverse;
-    z-index: 1;
+    /* z-index: 1; */
     height: 80vh;
     width: 100%;
     /* max-width: 1400px; */
