--- a/components/Services/Services.module.css
+++ b/components/Services/Services.module.css
@@ -1,8 +1,6 @@
 .sectionContainer{
-    margin-top: 5rem;
-    z-index: 999;
-    position: relative;
-    height: 800px;
+    /* margin-top: 5rem; */
+    /* height: 800px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,13 +8,14 @@
     background-color: var(--purple) ;
 }
 .servicesTitle{
+    margin-top: 2rem;
     font-size: 3.5rem;
     line-height: 1.1;
     font-weight: 400;
     font-family: "Slabo 13px", serif;
     color: var(--white);
     letter-spacing: 2px;
-    margin-bottom: 64px;
+    margin-bottom: 1rem;
 }
 .servicesWrapper{
     display: grid;
@@ -25,17 +24,33 @@
     align-items: center;
     grid-gap: 16px;
     padding: 0 50px;
-    margin: 0 auto;
+    margin: 2rem auto;
 }
 
 
 @media screen and (min-width:768px) {
-
+    .sectionContainer{
+        margin-top: -3rem;
+        z-index: 999;
+        position: relative;
+        height: 800px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--purple) ;
+    }
+    .servicesTitle{
+        font-size: 3.5rem;
+        line-height: 1.1;
+        font-weight: 400;
+        font-family: "Slabo 13px", serif;
+        color: var(--white);
+        letter-spacing: 2px;
+        margin-bottom: 64px;
+    }
     .servicesWrapper{
         max-width: 1300px;
-        
-
-
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
