--- a/components/Testimonials/Testimonials.module.css
+++ b/components/Testimonials/Testimonials.module.css
@@ -1,16 +1,16 @@
 .testimonialsContainer{
-    height: 800px;
+    margin-top: 3rem;
+    /* height: 800px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 .testimonialsWrapper{
-    max-width: 1300px;
-    margin: 0 auto;
+    /* margin: 1rem auto; */
+    margin-bottom: 2rem;
     display: grid;
-    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     align-items: center;
     grid-gap: 16px;
     padding: 0 50px;
@@ -18,8 +18,39 @@
 .testimonialsTitle{
     font-size: 3.5rem;
     line-height: 1.1;
-    font-weight: 600;
+    font-weight: 400;
     font-family: "Slabo 13px", serif;
-    color: #8e5aaa;
-    margin-bottom: 64px;
+    color: var(--purple);
+    letter-spacing: 2px;
+    margin-bottom: 2rem;
+}
+
+@media screen and (min-width:768px) {
+    .testimonialsContainer{
+        margin-top: -3rem;
+        height: 800px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .testimonialsWrapper{
+        max-width: 1300px;
+        margin: 0 auto;
+        display: grid;
+        /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        grid-gap: 16px;
+        padding: 0 50px;
+    }
+    .testimonialsTitle{
+        font-size: 3.5rem;
+        line-height: 1.1;
+        font-weight: 400;
+        font-family: "Slabo 13px", serif;
+        color: var(--purple);
+        letter-spacing: 2px;
+        margin-bottom: 64px;
+    }
 }
