--- a/components/utilityComponents/TestimonialsCard/Card.module.css
+++ b/components/utilityComponents/TestimonialsCard/Card.module.css
@@ -1,15 +1,15 @@
 .cardWrapper{
+    text-align: center;
+    height: 100%;
     background: var(--purple);
-    display: flex;
-    max-width: 600px;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     border-radius: 10px;
-    max-height: 360px;
     padding: 30px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
     transition: all 0.2s ease-in-out;
+    
 }
 .cardIcon {
     height: 160px;
@@ -26,9 +26,24 @@
     color: var(--white);
     
 }
-
 .cardDesc{
     font-size: 1rem;
     color: var(--white);
     text-align: center;
+}
+
+@media screen and (min-width:768px) {
+    .cardWrapper{
+        background: var(--purple);
+        display: flex;
+        max-width: 600px;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        border-radius: 10px;
+        max-height: 360px;
+        padding: 30px;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+        transition: all 0.2s ease-in-out;
+    }
 }
